--- a/ontime/index.html
+++ b/ontime/index.html
@@ -131,113 +131,51 @@
 	</div>
 
 
-	<div class="container about" id="preim">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="small-title">Наши</div>
-				<h2>Преимущества</h2>
-			</div>
-		</div>
-		<div class="row df">
-			<div class="col-md-3">
-				<ul>
-					<li><i class="fa fa-trophy" aria-hidden="true"></i>Преимущество 1</li>
-					<li><i class="fa fa-trophy" aria-hidden="true"></i>Преимущество 1</li>
-					<li><i class="fa fa-trophy" aria-hidden="true"></i>Преимущество 1</li>
-					<li><i class="fa fa-trophy" aria-hidden="true"></i>Преимущество 1</li>
-				</ul>
-			</div>
-			<div class="col-md-6"><img src="img/about.png" alt=""></div>
-			<div class="col-md-3 right">
-				<ul>
-					<li>Преимущество 1<i class="fa fa-trophy" aria-hidden="true"></i></li>
-					<li>Преимущество 1<i class="fa fa-trophy" aria-hidden="true"></i></li>
-					<li>Преимущество 1<i class="fa fa-trophy" aria-hidden="true"></i></li>
-					<li>Преимущество 1<i class="fa fa-trophy" aria-hidden="true"></i></li>			
-				</ul>
-			</div>
-		</div>
-	</div>
+	
 
 	<div class="container-fluid preim">
 		<div class="row">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="small-title">достижения</div>
-						<h2>Почему Мы</h2>
-						<div class="col-sm-4">
+						<div class="small-title">Услуга (подключение)</div>
+						<h2>Преимущества </h2>
+						<div class="col-sm-3">
 							<div class="preim-item">
-								<h3><span data-count="3"></span>года на рынке</h3>
-								<p>3 года успешной работы на рынке</p>
+								<img src="img/connection.svg" alt="">
+								<h3>Быстро подключаем</h3>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="preim-item">
-								<h3><span data-count="3"></span>года на рынке</h3>
-								<p>3 года успешной работы на рынке</p>
+								<img src="img/lower-prices.svg" alt="">
+								<h3>Дешево всего лишь 3%</h3>
+								
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="preim-item">
-								<h3><span data-count="3"></span>года на рынке</h3>
-								<p>3 года успешной работы на рынке</p>
+								<img src="img/stopwatch.svg" alt="">
+								<h3>Вовремя получаете свой доход</h3>	
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="preim-item">
+								<img src="img/collaboration.svg" alt="">
+								<h3>Надежно-официальный партнер <br>(Яндекс, Gett, Uber)</h3>	
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</div>
 
-	<div class="container-fluid instruct" id="instruction">
-		<div class="row">
-			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
-						<div class="small-title">как зарегистрироваться</div>
-						<h2>Инструкция</h2>
-						<div class="col-sm-4 ins-item1">
-							<div class="item">
-								<div class="overlay"></div>
-								<div class="num">1</div>
-								<div class="step">шаг</div>
-								<h4>Описание</h4>
-							</div>
-						</div>
-						<div class="col-sm-4 ins-item">
-							<div class="item">
-								<div class="overlay"></div>
-								<div class="num">2</div>
-								<div class="step">шаг</div>
-								<h4>Описание</h4>
-							</div>
-						</div>
-						<div class="col-sm-4 ins-item">
-							<div class="item">
-								<div class="overlay"></div>
-								<div class="num">3</div>
-								<div class="step">шаг</div>
-								<h4>Описание</h4>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container-fluid call" id="call">
-		<div class="row">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="small-title">хотите подключиться</div>
+					<div class="col-md-12 connect">
+						<div class="small-title">хотите подключиться<br> г. Москва, также подключаем граждан Кыргызстана, Узбекистана, Таджикистана</div>
 						<h2>Оставьте заявку</h2>
 						<form action="">
 							<input type="text" placeholder="Ваше имя" class="inp">
 							<input type="text" placeholder="Ваш телефон" class="inp" required>
-							<input type="text" placeholder="Ваш email" class="inp">
+							
 							<button class="send">Отправить</button>
 						</form>
 					</div>
@@ -245,33 +183,7 @@
 			</div>
 		</div>
 	</div>
-	
-	<div class="container-fluid faq">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="small-title">хотите узнать</div>
-				<h2>Вопросы-ответы</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-offset-1 col-sm-5">
-				<ul class="accordion">
-					<li>
-						<a>Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</a>
-						<p>Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</p>
-					</li>
-					<li>
-						<a>Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</a>
-						<p>Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</p>
-					</li>
-				</ul> <!-- / accordion -->
-			</div>
 
-			<div class="col-sm-6">
-				<img src="img/car-big-side.png" alt="">
-			</div>
-		</div>
-	</div>
 
 	<div class="container-fluid reviews" id="reviews">
 		<div class="overlay"></div>
@@ -282,7 +194,8 @@
 						<div class="small-title">Прочитайте</div>
 						<h2>Отзывы клиентов</h2>
 						<div class="owl-carousel owl-reviews">
-							<div class="item">
+							<div class="main-item">
+								<div class="item">
 								<div class="descr">
 									Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
 								</div>
@@ -304,6 +217,7 @@
 								</div>
 								<img src="img/testi-3.jpg" alt="">
 								<div class="name">Имя</div>
+							</div>
 							</div>
 						</div>
 					</div>
