--- a/ontime/index.html
+++ b/ontime/index.html
@@ -55,10 +55,9 @@
 				<div class="menu-glavnaya-container">
 					<ul id="w1" class="navbar-nav nav">
 						<li class="active"><a href="#">Главная</a></li>
-						<li><a href="#preim">Преимущества</a></li>
-						<li><a href="#instruction">Инструкция</a></li>
 						<li><a href="#reviews">Отзывы</a></li>
 						<li><a href="#contacts">Контакты</a></li>
+						<li class="phone">+996 777 00 11 22</li>
 						<li class="phone">+996 777 00 11 22</li>
 						<li><a href="#call" class="popup-with-form navbar-text navbar-right callback hidden-sm">Заказать звонок</a> </li>
 					</ul>
@@ -130,46 +129,65 @@
 		</a>
 	</div>
 
-
-	
-
-	<div class="container-fluid preim">
+	<div class="container about" id="preim">
 		<div class="row">
-			<div class="container">
+			<div class="col-md-12">
+				<div class="small-title">Наши</div>
+				<h2>Преимущества</h2>
+			</div>
+		</div>
+		<div class="row df">
+			<div class="col-md-3">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="small-title">Услуга (подключение)</div>
-						<h2>Преимущества </h2>
-						<div class="col-sm-3">
-							<div class="preim-item">
+						<div class="preim-item">
 								<img src="img/connection.svg" alt="">
 								<h3>Быстро подключаем</h3>
 							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="preim-item">
+					</div>
+
+					<div class="col-md-12">
+						<div class="preim-item">
 								<img src="img/lower-prices.svg" alt="">
 								<h3>Дешево всего лишь 3%</h3>
 								
 							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="preim-item">
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6"><img src="img/about.png" alt=""></div>
+			<div class="col-md-3 right">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="preim-item">
 								<img src="img/stopwatch.svg" alt="">
 								<h3>Вовремя получаете свой доход</h3>	
 							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="preim-item">
+
+							<div class="col-md-12">
+								<div class="preim-item">
 								<img src="img/collaboration.svg" alt="">
-								<h3>Надежно-официальный партнер <br>(Яндекс, Gett, Uber)</h3>	
+								<h3>Надежно-официальный партнер </h3>	
+								<div class="row partner">
+									<div class="col-md-4">
+										<img src="img/gett.png" alt="">
+									</div>
+									<div class="col-md-4">
+										<img src="img/yandex_taxi.png" alt="">
+									</div>
+									<div class="col-md-4">
+										<img src="img/uber.png" alt="">
+									</div>
+								</div>
 							</div>
-						</div>
+							</div>
 					</div>
 				</div>
+			</div>
+		</div>
 
-				<div class="row">
-					<div class="col-md-12 connect">
+		<div class="row">
+					<div class="col-md-12 connect" id="call">
 						<div class="small-title">хотите подключиться<br> г. Москва, также подключаем граждан Кыргызстана, Узбекистана, Таджикистана</div>
 						<h2>Оставьте заявку</h2>
 						<form action="">
@@ -180,9 +198,8 @@
 						</form>
 					</div>
 				</div>
-			</div>
-		</div>
 	</div>
+
 
 
 	<div class="container-fluid reviews" id="reviews">
