--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <body oncontextmenu="return false" oncopy="return false;" onselectstart="return false;">
 
 	<span itemscope itemtype="http://schema.org/LocalBusiness"/>
+
+	<div class="preloader"></div>
 		<header>
 			<div class="container-fluid">
 				<div class="row">
