--- a/index.html
+++ b/index.html
@@ -222,6 +222,26 @@
 						</div>
 						<div id="portfolio_grid">
 
+							<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
+								<img src="" alt="Ontime-taxi" data-src="img/portfolio-images/ontime.jpg"/>
+								<div class="port_item_cont">
+									<h3>Ontime-taxi</h3>
+									<p>Описание работы</p>
+									<a href="#" class="popup_content">Посмотреть</a>
+								</div>
+								<div class="hidden">
+									<div class="podrt_descr">
+										<div class="modal-box-content">
+											<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+											<h3>Ontime-taxi</h3>
+											<p>Являются официальными партнерами Яндекс Такси  в Бишкеке и предоставляют заказы такси Бишкек.</p>
+											<a href="http://ontime-taxi.ru/" target="_blank">Перейти на сайт</a>
+											<img scr="" data-src="img/portfolio-images/ontime1.jpg" alt="Ontime-taxi" />
+										</div>
+									</div>
+								</div>
+							</div>
+
 							<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
 								<img src="" alt="Promoil" data-src="img/portfolio-images/promoil.jpg"/>
 								<div class="port_item_cont">
