--- a/clinic/index.html
+++ b/clinic/index.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body data-spy="scroll">
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
@@ -40,13 +40,13 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Logo</a>
+				<a class="navbar-brand" href="/"><img src="img/logo.png" alt=""></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Главная<span class="sr-only">(current)</span></a></li>	
+					<li class="active home"><a href="#">Главная<span class="sr-only">(current)</span></a></li>	
 					<li><a href="#service">Услуги</a></li>
 					<li><a href="#about">О нас</a></li>
 					<li><a href="#contacts">Контакты</a></li>
@@ -101,59 +101,79 @@
 			<span class="glyphicon glyphicon-chevron-right"></span>
 			<span class="sr-only">Next</span>
 		</a>
+
+		<svg class="tsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">  
+			<path d="M 1014 264 v 122 h -808 l -172 -86 s 310.42 -22.84 402 -79 c 106 -65 154 -61 268 -12 c 107 46 195.11 5.94 275 137 z"></path>   <path d="M -302 55 s 235.27 208.25 352 159 c 128 -54 233 -98 303 -73 c 92.68 33.1 181.28 115.19 235 108 c 104.9 -14 176.52 -173.06 267 -118 c 85.61 52.09 145 123 145 123 v 74 l -1306 10 z"></path>  
+			<path d="M -286 255 s 214 -103 338 -129 s 203 29 384 101 c 145.57 57.91 178.7 50.79 272 0 c 79 -43 301 -224 385 -63 c 53 101.63 -62 129 -62 129 l -107 84 l -1212 12 z"></path>  
+			<path d="M -24 69 s 299.68 301.66 413 245 c 8 -4 233 2 284 42 c 17.47 13.7 172 -132 217 -174 c 54.8 -51.15 128 -90 188 -39 c 76.12 64.7 118 99 118 99 l -12 132 l -1212 12 z"></path>  
+			<path d="M -12 201 s 70 83 194 57 s 160.29 -36.77 274 6 c 109 41 184.82 24.36 265 -15 c 55 -27 116.5 -57.69 214 4 c 49 31 95 26 95 26 l -6 151 l -1036 10 z"></path> 
+		</svg>
+
+		<svg class="bsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">  
+			<path d="M 1014 264 v 122 h -808 l -172 -86 s 310.42 -22.84 402 -79 c 106 -65 154 -61 268 -12 c 107 46 195.11 5.94 275 137 z"></path>   <path d="M -302 55 s 235.27 208.25 352 159 c 128 -54 233 -98 303 -73 c 92.68 33.1 181.28 115.19 235 108 c 104.9 -14 176.52 -173.06 267 -118 c 85.61 52.09 145 123 145 123 v 74 l -1306 10 z"></path>  
+			<path d="M -286 255 s 214 -103 338 -129 s 203 29 384 101 c 145.57 57.91 178.7 50.79 272 0 c 79 -43 301 -224 385 -63 c 53 101.63 -62 129 -62 129 l -107 84 l -1212 12 z"></path>  
+			<path d="M -24 69 s 299.68 301.66 413 245 c 8 -4 233 2 284 42 c 17.47 13.7 172 -132 217 -174 c 54.8 -51.15 128 -90 188 -39 c 76.12 64.7 118 99 118 99 l -12 132 l -1212 12 z"></path>  
+			<path d="M -12 201 s 70 83 194 57 s 160.29 -36.77 274 6 c 109 41 184.82 24.36 265 -15 c 55 -27 116.5 -57.69 214 4 c 49 31 95 26 95 26 l -6 151 l -1036 10 z"></path> 
+		</svg>
 	</div>
-	
-	<div class="container service">
+
+	<div class="container-fluid service">
 		<div class="row">
-			<div class="col-md-12">
-				<h2>Наши услуги</h2>
-				<div class="owl-carousel owl-service">
-					<div class="item">
-						<img src="img/item1.jpg" alt="">
-						<h3>Название услуги</h3>
-						<div class="descr">Описание услуги</div>
-						<div class="button">
-							<a href="#" class="more">Подробнее</a>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2>Наши услуги</h2>
+						<div class="owl-carousel owl-service">
+							<div class="item">
+								<img src="img/item1.jpg" alt="">
+								<h3>Название услуги</h3>
+								<div class="descr">Описание услуги</div>
+								<div class="button">
+									<a href="#" class="more">Подробнее</a>
+								</div>
+							</div><!-- item -->
+							<div class="item">
+								<img src="img/item1.jpg" alt="">
+								<h3>Название услуги</h3>
+								<div class="descr">Описание услуги</div>
+								<div class="button">
+									<a href="#" class="more">Подробнее</a>
+								</div>
+							</div><!-- item -->
+							<div class="item">
+								<img src="img/item1.jpg" alt="">
+								<h3>Название услуги</h3>
+								<div class="descr">Описание услуги</div>
+								<div class="button">
+									<a href="#" class="more">Подробнее</a>
+								</div>
+							</div><!-- item -->
+							<div class="item">
+								<img src="img/item1.jpg" alt="">
+								<h3>Название услуги</h3>
+								<div class="descr">Описание услуги</div>
+								<div class="button">
+									<a href="#" class="more">Подробнее</a>
+								</div>
+							</div><!-- item -->
+							<div class="item">
+								<img src="img/item1.jpg" alt="">
+								<h3>Название услуги</h3>
+								<div class="descr">Описание услуги</div>
+								<div class="button">
+									<a href="#" class="more">Подробнее</a>
+								</div>
+							</div><!-- item -->
 						</div>
-					</div><!-- item -->
-					<div class="item">
-						<img src="img/item1.jpg" alt="">
-						<h3>Название услуги</h3>
-						<div class="descr">Описание услуги</div>
-						<div class="button">
-							<a href="#" class="more">Подробнее</a>
-						</div>
-					</div><!-- item -->
-					<div class="item">
-						<img src="img/item1.jpg" alt="">
-						<h3>Название услуги</h3>
-						<div class="descr">Описание услуги</div>
-						<div class="button">
-							<a href="#" class="more">Подробнее</a>
-						</div>
-					</div><!-- item -->
-					<div class="item">
-						<img src="img/item1.jpg" alt="">
-						<h3>Название услуги</h3>
-						<div class="descr">Описание услуги</div>
-						<div class="button">
-							<a href="#" class="more">Подробнее</a>
-						</div>
-					</div><!-- item -->
-					<div class="item">
-						<img src="img/item1.jpg" alt="">
-						<h3>Название услуги</h3>
-						<div class="descr">Описание услуги</div>
-						<div class="button">
-							<a href="#" class="more">Подробнее</a>
-						</div>
-					</div><!-- item -->
+					</div>
 				</div>
 			</div>
 		</div>
+		
 	</div>
 
 	<div class="container-fluid ad">
+		<div class="overlay"></div>
 		<div class="row">
 			<div class="container">
 				<div class="row df">
@@ -317,9 +337,22 @@
 				</div>
 			</div>
 		</div>
-	</div>
+		<svg class="tsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">  
+			<path d="M 1014 264 v 122 h -808 l -172 -86 s 310.42 -22.84 402 -79 c 106 -65 154 -61 268 -12 c 107 46 195.11 5.94 275 137 z"></path>   <path d="M -302 55 s 235.27 208.25 352 159 c 128 -54 233 -98 303 -73 c 92.68 33.1 181.28 115.19 235 108 c 104.9 -14 176.52 -173.06 267 -118 c 85.61 52.09 145 123 145 123 v 74 l -1306 10 z"></path>  
+			<path d="M -286 255 s 214 -103 338 -129 s 203 29 384 101 c 145.57 57.91 178.7 50.79 272 0 c 79 -43 301 -224 385 -63 c 53 101.63 -62 129 -62 129 l -107 84 l -1212 12 z"></path>  
+			<path d="M -24 69 s 299.68 301.66 413 245 c 8 -4 233 2 284 42 c 17.47 13.7 172 -132 217 -174 c 54.8 -51.15 128 -90 188 -39 c 76.12 64.7 118 99 118 99 l -12 132 l -1212 12 z"></path>  
+			<path d="M -12 201 s 70 83 194 57 s 160.29 -36.77 274 6 c 109 41 184.82 24.36 265 -15 c 55 -27 116.5 -57.69 214 4 c 49 31 95 26 95 26 l -6 151 l -1036 10 z"></path> 
+		</svg>
 
-	<div class="container-fluid callform">
+		<svg class="bsvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">  
+			<path d="M 1014 264 v 122 h -808 l -172 -86 s 310.42 -22.84 402 -79 c 106 -65 154 -61 268 -12 c 107 46 195.11 5.94 275 137 z"></path>   <path d="M -302 55 s 235.27 208.25 352 159 c 128 -54 233 -98 303 -73 c 92.68 33.1 181.28 115.19 235 108 c 104.9 -14 176.52 -173.06 267 -118 c 85.61 52.09 145 123 145 123 v 74 l -1306 10 z"></path>  
+			<path d="M -286 255 s 214 -103 338 -129 s 203 29 384 101 c 145.57 57.91 178.7 50.79 272 0 c 79 -43 301 -224 385 -63 c 53 101.63 -62 129 -62 129 l -107 84 l -1212 12 z"></path>  
+			<path d="M -24 69 s 299.68 301.66 413 245 c 8 -4 233 2 284 42 c 17.47 13.7 172 -132 217 -174 c 54.8 -51.15 128 -90 188 -39 c 76.12 64.7 118 99 118 99 l -12 132 l -1212 12 z"></path>  
+			<path d="M -12 201 s 70 83 194 57 s 160.29 -36.77 274 6 c 109 41 184.82 24.36 265 -15 c 55 -27 116.5 -57.69 214 4 c 49 31 95 26 95 26 l -6 151 l -1036 10 z"></path> 
+		</svg>
+	</div>
+	
+	<div class="container-fluid callform no-bg">
 		<div class="row">
 			<div class="container">
 				<div class="row">
@@ -337,6 +370,7 @@
 	</div>
 
 	<div class="container-fluid about" id="about">
+		<div class="overlay"></div>
 		<div class="row">
 			<div class="container">
 				<div class="row">
@@ -406,7 +440,7 @@
 				<h2>Контакты</h2>
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11695.81755558806!2d74.5852492304605!3d42.87380684190139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDUyJzI1LjciTiA3NMKwMzUnMzguNCJF!5e0!3m2!1sru!2skg!4v1524402857080" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
-			
+
 			<div class="container">
 				<div class="row">
 					<div class="col-md-3 col-sm-6 cont-form">
@@ -437,10 +471,10 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div class="top" title="Наверх"><i class="fa fa-angle-double-up"></i></div>
-	
+
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
 
